# theodore

./: .gitignore  README.md  Theodore_Detailed_Features.md  Theodore_managers_issues.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 7e45931f33ad_second_migration.py  ba8f43c20658_initial_migration.py  fcf0e6522047_added_log_search_column.py
custom_ner_model/: meta.json
custom_ner_model/ner/: moves
custom_ner_model/vocab/: strings.json
migrations/: env.py
migrations/versions/: d00cf1d03606_initial_migration.py
theodore/: system_service.py
theodore/ai/: cmd_manager.py  dispatch.py  intent.py  intents.py  route_builder.py  rules.py  train_data.py
theodore/audio/: audio_test.py  pyaudio_test.py  sound_device_test.py  threshold_test.py
theodore/cli/: __main__.py  async_click.py  config_cli.py  controller.py  dash_cli.py  download_cli.py  file_cli.py  reminder_cli.py  schedule_cli.py  server_cli.py  shell_cli.py  task_cli.py  tasks_cli.py  weather_cli.py
theodore/cli/.ipynb_checkpoints/: __main__-checkpoint.py  config_cli-checkpoint.py  download_cli-checkpoint.py  tasks_cli-checkpoint.py  weather_cli-checkpoint.py
theodore/core/: async_click.py  dashboard.py  db_operations.py  decorator.py  etl_helpers.py  exceptions.py  file_helpers.py  informers.py  lazy.py  logger_setup.py  paths.py  state.py  theme.py  time_converters.py  transporter.py  utils.py  worker_setup.py
theodore/core/.ipynb_checkpoints/: etl_helpers-checkpoint.py
theodore/data/: theodore.sqlite
theodore/data/json/: configs.json  file_manager_logs.json  movies.json
theodore/managers/: cache_manager.py  configs_manager.py  daemon_manager.py  dash.py  download_manager.py  event_handler.py  file_handler.py  file_manager.py  log_manager.py  log_manger.py  log_search.py  log_service.py  notify.py  open_apps.py  schedule_manager.py  scheduler.py  shell_manager.py  smart_home.py  tasks_manager.py  weather_manager.py
theodore/math/: log_vectorizer.py
theodore/models/: all_imports.py  base.py  configs.py  downloads.py  file.py  other_models.py  tasks.py  weather.py
theodore/models/.ipynb_checkpoints/: tasks-checkpoint.py
theodore/tests/: daemon_manager.py  git_automation.py  tasks_test.py  tester_upper.py  weather_tests.py  worker.py  worker_efficient.py
theodore/training/: spacy_ner.py
theodore/web/: jobs.py  main.py  schemas.py
(+8 files in other folders)
