[project]
name = "theodore"
version = "0.1.0"
description = "Theodore Hybrid Voice Assistant"
authors = [
    {name = "Jibi"}
]
license = {text = "None yet"}
packages = [
    { include = "theodore" }
]
dependencies = [
    "apscheduler>=3.11.2",
    "click-repl>=0.3.0",
    "fastapi[standard]>=0.128.0",
    "faster-whisper>=1.2.1",
    "gensim>=4.4.0",
    "pip>=25.3",
    "sentence-transformers>=5.2.0",
    "sounddevice>=0.5.5",
    "spacy>=3.8.11",
    "spacy-lookups-data>=1.0.5",
    "torch>=2.10.0",
]

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=8.3.0,<9.0.0"
rich = ">=14.2.0,<15.0.0"
requests = "^2.32.5"
dotenv = "^0.9.9"
console = "^0.9912"
click-option-group = "^0.5.9"
sqlalchemy = "^2.0.44"
flask = "^3.1.2"
dateparser = "^1.2.2"
numpy = "^2.3.4"
pandas = "^2.3.3"
plyer = "^2.1.0"
schedule = "^1.2.2"
fake-user-agent = "^2.3.9"
rich-click = "^1.9.4"
pyttsx3 = "^2.99"
vosk = "^0.3.45"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
alembic = "^1.17.2"
watchdog = "^6.0.0"
psutil = "^7.2.1"
soundfile = "^0.13.1"
scipy = "^1.17.0"

[tool.poetry.scripts]
theodore = "theodore.cli.__main__:theodore"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
